fixed and added some test functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "types": ["mocha", "jest", "enzyme"]
+    "types": ["mocha", "jest"],
+    "lib": ["es2022", "dom"]
   }
 }
