--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.11",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/mocha": "^10.0.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -44,7 +45,9 @@
   },
   "dependencies": {
     "eslint": "^8.50.0",
+    "js-cookie": "^3.0.5",
     "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.21.3",
     "style-loader": "^3.3.3"
   }
 }
