--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-react": "^7.22.15",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.15.7",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
     "@types/js-cookie": "^3.0.6",
@@ -44,6 +44,12 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@mui/icons-material": "^5.15.7",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^8.50.0",
     "js-cookie": "^3.0.5",
     "react-hook-form": "^7.47.0",
